--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,7 @@
   "version": "2.0.1",
   "description": "Official Strapi Demo Application",
   "scripts": {
-    "develop": "strapi develop",
+    "dev": "strapi develop",
     "start": "strapi start",
     "build": "strapi build",
     "strapi": "strapi",
@@ -14,10 +14,10 @@
   "dependencies": {
     "@ckeditor/strapi-plugin-ckeditor": "^0.0.7",
     "@offset-dev/strapi-calendar": "^0.0.10",
-    "@strapi/plugin-graphql": "4.12.0-beta.1",
-    "@strapi/plugin-i18n": "4.12.0-beta.1",
-    "@strapi/plugin-users-permissions": "4.12.0-beta.1",
-    "@strapi/strapi": "4.12.0-beta.1",
+    "@strapi/plugin-graphql": "4.11.7",
+    "@strapi/plugin-i18n": "4.11.7",
+    "@strapi/plugin-users-permissions": "4.11.7",
+    "@strapi/strapi": "4.11.7",
     "@webbio/strapi-plugin-scheduler": "^0.1.2",
     "better-sqlite3": "^7.6.2",
     "fs-extra": "^10.0.0",
@@ -30,7 +30,7 @@
     "name": "A Strapi developer"
   },
   "strapi": {
-    "uuid": "91bcb9c3-39e5-43e4-ac15-05df0813913f"
+    "uuid": "FOODADVISOR-LOCAL-da0f305b-e57d-4169-a47f-0a532f93f69b"
   },
   "engines": {
     "node": ">=14.x.x <=18.x.x",
