--- a/client/package.json
+++ b/client/package.json
@@ -12,12 +12,13 @@
     "@ckeditor/ckeditor5-react": "^5.0.2",
     "date-fns": "^2.29.3",
     "dlv": "^1.1.3",
+    "eslint-config-next": "^13.5.4",
     "github-markdown-css": "^4.0.0",
-    "next": "12",
+    "next": "^13.5.4",
     "pluralize": "^8.0.0",
-    "react": "^17.0.2",
+    "react": "^18.2.0",
     "react-code-blocks": "^0.0.9-0",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.2.0",
     "react-github-btn": "^1.4.0",
     "react-markdown": "^8.0.3",
     "react-multi-carousel": "^2.6.3",
